# kv

./: .gitignore  Cargo.toml  Makefile  README.md  abi.proto  build.rs
examples/: client.rs  client_deprecated.rs  dummy_server.rs  prost_server.rs  server.rs  server_deprecated.rs  service.rs
examples/clients/: client.rs  client2.rs  client_deprecated.rs
examples/extras/: client_framed.rs  server_framed.rs
examples/servers/: dummy_server.rs  server.rs  server_deprecated.rs  server_with_sled.rs  server_with_sled2.rs
libs/async-prost/: Cargo.toml
libs/async-prost/src/: frame.rs  reader.rs  stream.rs
libs/async-prost/tests/: framed.rs
libs/prost-stream/: Cargo.toml  README.md
libs/prost-stream/src/: lib.rs  stream.rs
src/: error.rs  lib.rs  pb.rs  service.rs  storage.rs
src/pb/: abi.rs
src/service/: command_service.rs
src/storage/: memory.rs  sled_db.rs
