[package]
name = "async-prost"
version = "0.4.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/async-prost"
repository = "https://github.com/tyrchen/async-prost"
homepage = "https://github.com/tyrchen/async-prost"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
bytes = "1"
byteorder = "1"
either = "1"
futures-core = "0.3"
futures-sink = "0.3"
prost = "0.14"
serde = "1"
tokio = { version = "1", features = ["net"] }

[dev-dependencies]
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tower = "0.6"
slab = "0.4"
tower = { version = "0.5", features = ["full"] }
