[package]
name = "prost-stream"
version = "0.1.3"
edition = "2024"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "prost stream"
keywords = ["prost", "prost-stream", "async-prost"]
license = "MIT"
repository = "https://github.com/hangj/prost-stream"
documentation = "https://docs.rs/prost-stream/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

[features]
default = []
async = ["dep:tokio"]

[dependencies]
prost = "0.14"
thiserror = "2"
tokio = {version = "1", features = ["io-util"], optional = true}

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
anyhow = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]
